--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cisco Blogging</title>
+<title>Cisco Blogging Test</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
